# ai_infrastructure_toolkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
demo_archive/: 20251028_102655_claude_analyze-healthcare-data.md
examples/: basic_usage.py  bias_detection_demo.py  complete_pipeline.py  evaluation_demo.py  production_use_case.py  template_demo.py  vector_search_demo.py
src/: __init__.py
src/evaluation/: __init__.py  bias_detector.py  dspy_optimizer.py  llm_judge.py
src/local_llm/: __init__.py  ollama_client.py
src/prompts/: __init__.py  archiving.py  template_manager.py
src/vector_search/: __init__.py  chromadb_client.py  semantic_engine.py
src/workflows/: __init__.py  pipeline.py
templates_prod/: product_description.txt
tests/: test_archiving.py  test_bias_detector.py  test_evaluation.py  test_pipeline.py  test_vector_search.py
